--- a/src/faq.html
+++ b/src/faq.html
@@ -209,7 +209,7 @@
                 <!-- end Keunggulan -->
 
                 <!-- cta -->
-                <div class="flex items-center">
+                <div class="flex items-center justify-between md:flex-col">
                     <div class="mb-12 w-96 md:w-full">
                         <section class="mb-10">
                             <h2 class="text-2xl font-semibold text-blue-800">Solusi Sempurna untuk Bisnis Anda</h2>
@@ -226,7 +226,9 @@
                         </button>
                     </div>
                     
-                    
+                    <div class="md:w-full">
+                        <img class="h-96 w-auto" src="./img/cloud.png" alt="">
+                    </div>
                 </div>
                 <!-- end cta -->
 
