--- a/src/register.html
+++ b/src/register.html
@@ -53,7 +53,11 @@
         <div class="max-w-6xl w-full mx-auto">
             <!-- main container -->
             <div class="mainContainer max-w-4xl mx-auto pt-8">
-                <h2 class="text-2xl font-medium text-center mb-6">Register</h2>
+                <!-- header -->
+                <div class="bg-blue-700 border border-blue-800 py-4 rounded-t-md">
+                    <h2 class="text-2xl font-medium text-center text-white">Register</h2>
+                </div>
+
                 <!-- form register -->
                 <form action="#" class="border py-6 px-10 md:mx-6">
                     <!-- personal information -->
