--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
                 <a href="./login-v2.html" target="_blank">Login v2</a>
                 <a href="./register.html" target="_blank">Register</a>
                 <a href="./domain-lock.html" target="_blank">Domain lock</a>
-                <a href="./cart.html" target="_blank">Chart</a>
+                <a href="./cart.html" target="_blank">Cart</a>
                 <a href="./checkout.html" target="_blank">Checkout</a>
                 <a href="./faq.html" target="_blank">FAQ</a>
             </div>
