--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,7 @@
             <p class="w-full text-center">Choose  template :</p>
             <div class="flex justify-center space-x-2">
                 <a href="./blankpage.html" target="_blank">Blank</a>
-                <a href="./login.html" target="_blank">Login v1</a>
-                <a href="./login-v2.html" target="_blank">Login v2</a>
+                <a href="./login.html" target="_blank">Login</a>
                 <a href="./register.html" target="_blank">Register</a>
                 <a href="./domain-lock.html" target="_blank">Domain lock</a>
                 <a href="./cart.html" target="_blank">Cart</a>
