new image assets

--- a/src/login.html
+++ b/src/login.html
@@ -22,7 +22,7 @@
        
         <!--ilusstratio-->
         <div class="py-10">
-          <img class="mx-auto" src="img/login.png" alt="Your Brand">
+          <img class="mx-auto" src="img/login-pic.png" alt="Your Brand">
         </div>
 
         <!--title-->
