add register steps template

--- a/src/register.html
+++ b/src/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Login page</title>
+    <title>Register page</title>
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
 </head>
@@ -88,7 +88,7 @@
                         Dengan mendaftar, Saya menyetujui Seluruh <a href="#" class="link">Syarat & Ketentuan</a> yang berlaku pada website Pandi.
                     </div>
                     <div class="grid items-center">
-                        <button type="submit" class="group relative flex justify-center py-2 px-4 btn-primary rounded-md">
+                        <button type="button" class="group relative flex justify-center py-2 px-4 btn-primary rounded-md" onclick="window.location.href='./register-step2.html';">
                             <span class="flex items-center">
                               <svg class="w-6 h-6 mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
                             </span>
