--- a/src/register-step3.html
+++ b/src/register-step3.html
@@ -19,15 +19,7 @@
             <!-- register card -->
             <div class="shadow-2xl bg-white p-8 rounded-lg">
                 <!-- header -->
-                <div class="flex justify-between items-center mb-14">
-                    <div>
-                        <a href="login.html" class="group relative flex justify-center py-1 px-3 btn-primary rounded-md text-sm">
-                            <span class="flex items-center">
-                                <svg class="w-4 h-4 mr-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fillRule="evenodd" d="M9.707 16.707a1 1 0 01-1.414 0l-6-6a1 1 0 010-1.414l6-6a1 1 0 011.414 1.414L5.414 9H17a1 1 0 110 2H5.414l4.293 4.293a1 1 0 010 1.414z" clipRule="evenodd" /></svg>
-                            </span>
-                            Halaman Login
-                        </a>
-                    </div>
+                <div class="flex justify-end items-center mb-14">
                     <div>
                         <img src="img/logos.png" class="h-10 w-auto" alt="pandi">
                     </div>
@@ -56,7 +48,7 @@
                               <path fill-rule="evenodd" d="M5 9V7a5 5 0 0110 0v2a2 2 0 012 2v5a2 2 0 01-2 2H5a2 2 0 01-2-2v-5a2 2 0 012-2zm8-2v2H7V7a3 3 0 016 0z" clip-rule="evenodd" />
                           </svg>
                         </span>
-                        Login
+                        Login sekarang
                     </button>
                 </div>
                 <!--end status-->
