add new pages templates

--- a/src/index.html
+++ b/src/index.html
@@ -9,22 +9,42 @@
 </head>
 <body class="bg-gray-200">
     
-    <header class="p-20 bg-gradient-to-r from-blue-800 via-indigo-500 to-blue-700 text-center">
+    <header class="p-20 bg-gradient-to-r from-red-800 via-red-500 to-red-700 text-center">
         <h1 class="hero-heading">Gulp with TailwindCSS templates</h1>
         <p class="w-full text-center text-white text-xl leading-5 mb-2">For Cloud Company</p>
         <p class="w-full text-center text-white text-lg leading-5 mb-10">Updated with Tailwind 2.0, PostCss 8.0+</p>
     </header>
-    <div class="mx-auto py-20 max-w-5xl">
+    <div class="w-full">
         <div class="social">
-            <p class="w-full text-center">Choose  template :</p>
-            <div class="flex justify-center space-x-2">
-                <a href="./blankpage.html" target="_blank">Blank</a>
-                <a href="./login.html" target="_blank">Login</a>
-                <a href="./register.html" target="_blank">Register</a>
-                <a href="./domain-lock.html" target="_blank">Domain lock</a>
-                <a href="./cart.html" target="_blank">Cart</a>
-                <a href="./checkout.html" target="_blank">Checkout</a>
-                <a href="./faq.html" target="_blank">FAQ</a>
+            <p class="w-full text-center mb-6 text-2xl font-bold">Choose  template :</p>
+            <div class="grid grid-cols-6 gap-4 items-center">
+                <div class="p-3 text-center bg-red-100 border rounded">
+                    <a href="./register.html" target="_blank">Register step 1</a>
+                </div>
+                <div class="p-3 text-center bg-red-100 border rounded">
+                    <a href="./register-step2.html" target="_blank">Register-step2</a>
+                </div>
+                <div class="p-3 text-center bg-red-100 border rounded">
+                    <a href="./register-step3.html" target="_blank">Register-step3</a>
+                </div>
+                <div class="p-3 text-center bg-red-100 border rounded">
+                    <a href="./forgot-pass.html" target="_blank">Forgot password step 1</a>
+                </div>
+                <div class="p-3 text-center bg-red-100 border rounded">
+                    <a href="./forgot-pass2.html" target="_blank">Forgot password step 2</a>
+                </div>
+                <div class="p-3 text-center bg-red-100 border rounded">
+                    <a href="./forgot-pass3.html" target="_blank">Forgot password step 3</a>
+                </div>
+                <div class="p-3 text-center bg-red-100 border rounded">
+                    <a href="./login.html" target="_blank">Login</a>
+                </div>
+                <div class="p-3 text-center bg-red-100 border rounded">
+                    <a href="./blankpage.html" target="_blank">Blank</a>
+                </div>
+                <div class="p-3 text-center bg-red-100 border rounded">
+                    <a href="./beranda.html" target="_blank">Beranda</a>
+                </div>
             </div>
         </div>
     </div>
