--- a/src/login.html
+++ b/src/login.html
@@ -76,15 +76,15 @@
               </div>
       
               <div class="text-xs">
-                  <a href="#" class="font-medium link">
+                  <a href="forgot-pass.html" class="font-medium link">
                   Forgot password?
                   </a>
               </div>
             </div>
       
-            <!-- btutton -->
+            <!-- button -->
             <div class="flex items-center justify-between ml-24 pt-6">
-              <button type="submit" class="group relative flex justify-center py-1 px-2 text-sm btn-primary rounded-md">
+              <button type="submit" class="group relative flex justify-center py-2 px-3 text-sm btn-primary rounded">
                   <span class="flex items-center">
                     <!-- Heroicon name: solid/lock-closed -->
                     <svg class="h-4 w-4 mr-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
@@ -94,7 +94,7 @@
                   Login
               </button>
 
-              <a href="./register.html" class="py-1 px-2 btn-basic rounded-md text-sm">
+              <a href="./register.html" class="py-2 px-3 btn-basic rounded text-sm">
                 Register
               </a>
             </div>
