--- a/src/blankpage.html
+++ b/src/blankpage.html
@@ -13,10 +13,10 @@
 
     <!-- header -->
     <header class="header"> 
-        <div x-data="{ open: false }" class="max-w-6xl w-full mx-auto h-20 flex flex-row justify-between items-center">
+        <div x-data="{ open: false }" class="max-w-6xl w-full mx-auto h-20 flex flex-row justify-between items-center gap-3">
             <!-- logo -->
-            <div class="logo">
-                <a href="#"><img class="h-7 w-auto md:absolute md:ml-14" src="img/logo.png" alt="Your Brand"></a>
+            <div class="logo w-32">
+                <a href="beranda.html"><img class="md:absolute md:ml-14 md:w-24" src="img/logos.png" alt="Your Brand"></a>
                 <button class="hidden md:flex rounded-lg focus:outline-none focus:shadow-outline" @click="open = !open">
                     <svg fill="currentColor" viewBox="0 0 20 20" class="w-6 h-6">
                     <path x-show="!open" fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM9 15a1 1 0 011-1h6a1 1 0 110 2h-6a1 1 0 01-1-1z" clip-rule="evenodd"></path>
@@ -27,11 +27,12 @@
             <!-- end logo -->
 
             <!-- navbar -->
-            <div class="md:w-full md:bg-blue-50 md:absolute md:left-0 md:top-20 md:shadow-lg z-50">
+            <div class="w-full md:bg-gray-100 md:absolute md:left-0 md:top-20 md:shadow-lg z-50 content-start">
                 <nav :class="{'flex': open, 'md:hidden': !open}" class="navbar mb:pb-4 pb-0 md:hidde md:p-4">
-                    <a class="navlink" href="#">Blog</a>
-                    <a class="navlink" href="#">Promotion</a>  
-                    <a class="navlink" href="#">Program</a>     
+                    <a class="navlink" href="#">Beranda</a>
+                    <a class="navlink" href="#">Produk</a>  
+                    <a class="navlink" href="#">Domain</a>     
+                    <a class="navlink" href="#">Billing</a> 
                     <a class="navlink" href="#">Contact</a> 
                 </nav>
             </div>
@@ -52,10 +53,9 @@
     <div class="mainpage">
 
         <!-- title page -->
-        <div class="title mb-8">
-            <div class="max-w-6xl w-full  mx-auto py-6 md:px-6">
-                <h1 class="page-title text-white">Domain Settings</h1>
-                <p class="text-blue-300 text-sm italic">Portal / Home / Client Area / My Domains / paculhero.my.id</p>
+        <div class="title mb-6">
+            <div class="max-w-6xl w-full  mx-auto pt-2 pb-3 md:px-6">
+                <h1 class="page-title text-white">BERANDA</h1>
             </div>
         </div>
         <!-- title page -->
@@ -64,7 +64,7 @@
         <div class="mainContainer">
             <div class="max-w-6xl w-full  mx-auto py-6 md:px-6">
 
-                
+                kontenmu disini kawan!
 
             </div>
         </div>
@@ -74,19 +74,26 @@
     <!-- end page -->
 
     <!-- footer -->
-    <section class="footer">
+    <footer class="footer">
         <div class="max-w-6xl w-full  mx-auto">
-            <div class="flex items-center justify-between">
-                <div class="text-sm text-gray-400">
-                    Copyright © 2021 CloudHost. All Rights Reserved.
+            <div class="relative flex items-center justify-between">
+                <div class="text-xs text-gray-400">
+                    © 2021 2021 PANDI - PENGELOLA NAMA DOMAIN INTERNET INDONESIA. <br/>All Rights Reserved.
                 </div>
-    
-                <div>
-                    English
+                <div class="text-sm">
+                    <a href="#" class="link">Pandi <span class="mx-2 text-gray-400">|</span></a>
+                    <a href="#" class="link">FAQ <span class="mx-2 text-gray-400">|</span></a>
+                    <a href="#" class="link">Regulasi <span class="mx-2 text-gray-400">|</span></a>
+                    <a href="#" class="link">Syarat & Ketentuan</a>
+                </div>
+                <div class="h-14">
+                   <a href="#" class="link">
+                    <svg class="w-14 h-14" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M2 5a2 2 0 012-2h7a2 2 0 012 2v4a2 2 0 01-2 2H9l-3 3v-3H4a2 2 0 01-2-2V5z" /><path d="M15 7v2a4 4 0 01-4 4H9.828l-1.766 1.767c.28.149.599.233.938.233h2l3 3v-3h2a2 2 0 002-2V9a2 2 0 00-2-2h-1z" /></svg>
+                   </a>
                 </div>
             </div>
         </div>
-    </section>
+    </footer>
     <!-- end footer -->
 
     <!-- Javascript -->
