--- a/src/forgot-pass3.html
+++ b/src/forgot-pass3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Register page</title>
+    <title>Forgot password page</title>
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
 </head>
@@ -29,7 +29,7 @@
                 <!--title-->
                 <div class="px-16 mb-10">
                     <h1 class="text-center text-red-600 font-bold text-3xl">Pandi Registran Lock</h1>
-                    <p class="text-right font-bold text-xl text-gray-800 mr-3">Pendaftaran</p>
+                    <p class="text-right font-bold text-xl text-gray-800 mr-3">Atur ulang kata sandi</p>
                 </div>
                 <!--end title-->
 
@@ -38,7 +38,7 @@
                     <div class="h-32 w-32 rounded-full border-8 border-green-200 mx-auto flex items-center mb-10 animate-pulse">
                         <svg class="w-24 h-24 text-green-500 mx-auto" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fillRule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clipRule="evenodd" /></svg>
                     </div>
-                    <h4 class="text-green-500 font-bold text-xl">Verifikasi Email Berhasil,</h4>
+                    <h4 class="text-green-500 font-bold text-xl">Kata sandi berhasil dirubah,</h4>
                     <p class="text-sm mb-8">Silahkan Klik tombol di bawah ini untuk Login</p>
 
                     <button type="button" class="group relative flex justify-center py-2 px-4 btn-primary rounded-md mx-auto" onclick="window.location.href='./login.html';">
