--- a/src/register-step2.html
+++ b/src/register-step2.html
@@ -17,11 +17,11 @@
         <div class="max-w-lg w-full">
 
             <!-- register card -->
-            <div class="shadow-2xl bg-white p-8 rounded-lg">
+            <div class="shadow-2xl bg-white p-8 rounded-lg border-4 border-gray-100">
                 <!-- header -->
                 <div class="flex justify-between items-center mb-14">
                     <div>
-                        <a href="login.html" class="group relative flex justify-center py-1 px-3 btn-primary rounded-md text-sm">
+                        <a href="login.html" class="group relative flex justify-center py-1 px-3 btn-primary rounded text-sm">
                             <span class="flex items-center">
                                 <svg class="w-4 h-4 mr-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fillRule="evenodd" d="M9.707 16.707a1 1 0 01-1.414 0l-6-6a1 1 0 010-1.414l6-6a1 1 0 011.414 1.414L5.414 9H17a1 1 0 110 2H5.414l4.293 4.293a1 1 0 010 1.414z" clipRule="evenodd" /></svg>
                             </span>
