--- a/src/beranda.html
+++ b/src/beranda.html
@@ -56,7 +56,11 @@
     <!-- end header -->
 
     <!-- page -->
-    <div class="mainpage">
+    <div 
+        class="mainpage"
+        x-data="{ 'showModal': false }" 
+        @keydown.escape="showModal = false"
+        >
 
         <!-- title page -->
         <div class="title mb-6">
@@ -66,12 +70,53 @@
         </div>
         <!-- title page -->
 
+        <!-- modal -->
+        <div class="fixed inset-0 z-50 flex items-center justify-center overflow-auto bg-black bg-opacity-80 w-screen h-screen" 
+            x-show="showModal"
+            x-transition:enter="motion-safe:ease-out duration-300"
+            x-transition:enter-start="opacity-0 scale-90"
+            x-transition:enter-end="opacity-100 scale-100"
+        >
+                <!-- Modal inner -->
+                <div class=" w-80 max-w-2xl mx-auto text-left bg-white rounded shadow-lg transition ease-in-out duration-700"
+                    @click.away="showModal = false"
+                >
+            
+                <!-- modal title -->
+                <div class="bg-red-600 p-4 w-full rounded-t">
+                    <h5 class="text-white font-semibold mr-3 max-w-none">BELI LAYANAN</h5>
+                </div>
+
+                <!-- content -->
+                <div class="p-4 text-center space-y-6">
+                    <p>Silahkan pilih Domain Anda:</p>
+                    <div class="relative inline-block w-full form-controll">
+                        <select class="input" placeholder="Regular input">
+                          <option>kompas.web.id</option>
+                          <option>asal.web.id</option>
+                          <option>naon.web.id</option>
+                        </select>
+                        <div class="absolute inset-y-0 right-0 flex items-center px-2 pointer-events-none">
+                          <svg class="w-4 h-4 fill-current" viewBox="0 0 20 20"><path d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" fill-rule="evenodd"></path></svg>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- footer -->
+                <div class="p-4 text-right border-t mt-6">
+                    <button class="btn-basic py-1.5 px-3 mr-2 rounded" @click="showModal = false">Batal</button>
+                    <button class="btn-primary py-1.5 px-3 rounded" onclick="window.location.href='./formbuilder-add.html';">Pesan</button>
+                </div>
+            </div>
+        </div>
+        <!-- end modal -->
+
         <!-- main container -->
         <div class="mainContainer">
             <div class="max-w-6xl w-full  mx-auto py-6 md:px-6">
 
                 <!--stats-->
-                <div class="grid grid-cols-2 gap-10 mb-16">
+                <div class="grid grid-cols-2 gap-10 mb-16 md:grid-cols-1">
                     <div class="border rounded-2xl bg-gradient-to-r from-yellow-400 via-red-500 to-pink-500 p-4">
                         <a href="domain.html" class="block">
                             <div class="flex justify-between">
@@ -106,15 +151,15 @@
 
                 <!--Produk regyitrylock-->
                 <h2 class="text-center text-3xl text-red-600 mb-8">Produk Registry Lock</h2>
-                <div class="grid grid-cols-3 gap-10">
+                <div class="grid grid-cols-3 gap-10 md:grid-cols-1">
                     <!--product card-->
-                    <div class="border rounded-lg text-center hover:shadow-xl transition-all ease-in-out duration-500">
+                    <div class="border-4 border-red-500 rounded-lg text-center hover:shadow-xl transition-all ease-in-out duration-500">
                         <div class="p-4 bg-gradient-to-r from-gray-50 to-gray-200 rounded-t-lg">
                             <h3 class="font-bold text-3xl text-red-600">.web.id</h3>
                         </div>
-                        <div class="px-4 py-8">
+                        <div class="px-4 pb-6 pt-4">
                             <p class="text-2xl text-gray-800 mb-6 font-semibold">Rp. 35.000 <span class="text-base text-gray-500">/ tahun</span></p>
-                            <button type="button" class="group relative flex justify-center py-2 px-4 btn-primary rounded-md mx-auto" onclick="window.location.href='./login.html';">
+                            <button type="button" class="group relative flex justify-center py-2 px-4 btn-primary rounded-md mx-auto" @click="showModal = true">
                                 <span class="flex items-center">
                                     <svg class="h-6 w-6 mr-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M3 1a1 1 0 000 2h1.22l.305 1.222a.997.997 0 00.01.042l1.358 5.43-.893.892C3.74 11.846 4.632 14 6.414 14H15a1 1 0 000-2H6.414l1-1H14a1 1 0 00.894-.553l3-6A1 1 0 0017 3H6.28l-.31-1.243A1 1 0 005 1H3zM16 16.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zM6.5 18a1.5 1.5 0 100-3 1.5 1.5 0 000 3z" /></svg>
                                 </span>
@@ -125,13 +170,13 @@
                     <!--end product card-->
 
                     <!--product card-->
-                    <div class="border rounded-lg text-center hover:shadow-xl transition-all ease-in-out duration-500">
+                    <div class="border-4 border-red-500 rounded-lg text-center hover:shadow-xl transition-all ease-in-out duration-500">
                         <div class="p-4 bg-gradient-to-r from-gray-50 to-gray-200 rounded-t-lg">
                             <h3 class="font-bold text-3xl text-red-600">.id</h3>
                         </div>
-                        <div class="px-4 py-8">
+                        <div class="px-4 pb-6 pt-4">
                             <p class="text-2xl text-gray-800 mb-6 font-semibold">Rp. 157.000 <span class="text-base text-gray-500">/ tahun</span></p>
-                            <button type="button" class="group relative flex justify-center py-2 px-4 btn-primary rounded-md mx-auto" onclick="window.location.href='./login.html';">
+                            <button type="button" class="group relative flex justify-center py-2 px-4 btn-primary rounded-md mx-auto"  @click="showModal = true">
                                 <span class="flex items-center">
                                     <svg class="h-6 w-6 mr-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M3 1a1 1 0 000 2h1.22l.305 1.222a.997.997 0 00.01.042l1.358 5.43-.893.892C3.74 11.846 4.632 14 6.414 14H15a1 1 0 000-2H6.414l1-1H14a1 1 0 00.894-.553l3-6A1 1 0 0017 3H6.28l-.31-1.243A1 1 0 005 1H3zM16 16.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zM6.5 18a1.5 1.5 0 100-3 1.5 1.5 0 000 3z" /></svg>
                                 </span>
@@ -142,13 +187,13 @@
                     <!--end product card-->
 
                     <!--product card-->
-                    <div class="border rounded-lg text-center hover:shadow-xl transition-all ease-in-out duration-500">
+                    <div class="border-4 border-red-500 rounded-lg text-center hover:shadow-xl transition-all ease-in-out duration-500">
                         <div class="p-4 bg-gradient-to-r from-gray-50 to-gray-200 rounded-t-lg">
                             <h3 class="font-bold text-3xl text-red-600">.co.id</h3>
                         </div>
-                        <div class="px-4 py-8">
+                        <div class="px-4 pb-6 pt-4">
                             <p class="text-2xl text-gray-800 mb-6 font-semibold">Rp. 210.000 <span class="text-base text-gray-500">/ tahun</span></p>
-                            <button type="button" class="group relative flex justify-center py-2 px-4 btn-primary rounded-md mx-auto" onclick="window.location.href='./login.html';">
+                            <button type="button" class="group relative flex justify-center py-2 px-4 btn-primary rounded-md mx-auto"  @click="showModal = true">
                                 <span class="flex items-center">
                                     <svg class="h-6 w-6 mr-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M3 1a1 1 0 000 2h1.22l.305 1.222a.997.997 0 00.01.042l1.358 5.43-.893.892C3.74 11.846 4.632 14 6.414 14H15a1 1 0 000-2H6.414l1-1H14a1 1 0 00.894-.553l3-6A1 1 0 0017 3H6.28l-.31-1.243A1 1 0 005 1H3zM16 16.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zM6.5 18a1.5 1.5 0 100-3 1.5 1.5 0 000 3z" /></svg>
                                 </span>
@@ -157,8 +202,6 @@
                         </div>
                     </div>
                     <!--end product card-->
-
-                    
 
                 </div>
                 <!--end Produk regyitrylock-->
