add domain templates

--- a/src/index.html
+++ b/src/index.html
@@ -45,6 +45,21 @@
                 <div class="p-3 text-center bg-red-100 border rounded">
                     <a href="./beranda.html" target="_blank">Beranda</a>
                 </div>
+                <div class="p-3 text-center bg-red-100 border rounded">
+                    <a href="./produk.html" target="_blank">Produk</a>
+                </div>
+                <div class="p-3 text-center bg-red-100 border rounded">
+                    <a href="./domain.html" target="_blank">Domain</a>
+                </div>
+                <div class="p-3 text-center bg-red-100 border rounded">
+                    <a href="./info.html" target="_blank">Info</a>
+                </div>
+                <div class="p-3 text-center bg-red-100 border rounded">
+                    <a href="./register-lock.html" target="_blank">Register Lock</a>
+                </div>
+                <div class="p-3 text-center bg-red-100 border rounded">
+                    <a href="./layanan.html" target="_blank">Layanan</a>
+                </div>
             </div>
         </div>
     </div>
