--- a/src/produk.html
+++ b/src/produk.html
@@ -38,19 +38,34 @@
             </div>
             <!-- end navbar -->
 
-            <!-- login -->
+            <!-- user -->
             <div class="relative flex">
                 <a href="#" class="mt-2 mr-3"> 
                     <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M10 2a6 6 0 00-6 6v3.586l-.707.707A1 1 0 004 14h12a1 1 0 00.707-1.707L16 11.586V8a6 6 0 00-6-6zM10 18a3 3 0 01-3-3h6a3 3 0 01-3 3z" /></svg>
                 </a>
-                <a class="group relative flex justify-start py-1.5 px-4 btn-primary text-sm rounded-full truncate">
-                    <span class="flex items-center">
-                        <svg class="w-5 h-5 mr-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fillRule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z" clipRule="evenodd" /></svg>
-                    </span>
-                    Pandji Wijaya
-                </a>
+
+                <div class="inline-block relative items-center" x-data="{open: false}">
+                    <button @click="open = !open" class="group relative flex justify-start py-1.5 px-4 btn-primary text-sm rounded-full truncate" :class="{'text-red-100': open, 'shadow-none': open}">
+                      <svg class="w-5 h-5 mr-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fillRule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z" clipRule="evenodd" /></svg>
+                        Pandji Wijaya
+                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" :class="{'rotate-180': open}" class="ml-1 transform inline-block fill-current text-white w-6 h-6"><path fill-rule="evenodd" d="M15.3 10.3a1 1 0 011.4 1.4l-4 4a1 1 0 01-1.4 0l-4-4a1 1 0 011.4-1.4l3.3 3.29 3.3-3.3z"/></svg>
+                    </button>
+                
+                    <ul x-show="open" class="bg-white absolute mt-2 shadow rounded w-40 py-1 text-red-600"
+                      x-transition:enter="transition ease-out duration-300"
+                      x-transition:enter-start="opacity-0 transform -translate-y-2"
+                      x-transition:enter-end="opacity-100 transform translate-y-0"
+                      x-transition:leave="transition ease-in duration-300"
+                      x-transition:leave-end="opacity-0 transform -translate-y-3"
+                      @click.away="open = false"
+                    >
+                      <li><a href="#" class="py-1 px-3 block hover:bg-red-100">Profile</a></li>
+                      <li><a href="#" class="py-1 px-3 border-b block hover:bg-red-100">Billing</a></li>
+                      <li><a href="#" class="py-1 px-3 block hover:bg-red-100">Log out</a></li>
+                    </ul>
+                </div>
             </div>
-            <!-- end login -->
+            <!-- end user -->
         </div>
     </header>
     <!-- end header -->
