add invoice template

--- a/src/index.html
+++ b/src/index.html
@@ -60,6 +60,15 @@
                 <div class="p-3 text-center bg-red-100 border rounded">
                     <a href="./layanan.html" target="_blank">Layanan</a>
                 </div>
+                <div class="p-3 text-center bg-red-100 border rounded">
+                    <a href="./pembayaran.html" target="_blank">Pembayaran</a>
+                </div>
+                <div class="p-3 text-center bg-red-100 border rounded">
+                    <a href="./invoice.html" target="_blank">Invoice Paid</a>
+                </div>
+                <div class="p-3 text-center bg-red-100 border rounded">
+                    <a href="./invoice-unpaid.html" target="_blank">Invoice Unpaid</a>
+                </div>
             </div>
         </div>
     </div>
