--- a/src/layanan.html
+++ b/src/layanan.html
@@ -224,7 +224,7 @@
                                     </div>
 
                                     <!-- button -->
-                                    <button type="submit" class="group relative w-full flex justify-center py-2 px-4 text-lg btn-basic rounded mb-4 drop-shadow-lg">
+                                    <button type="button" class="group relative w-full flex justify-center py-2 px-4 text-lg btn-basic rounded mb-4 drop-shadow-lg" onclick="window.location.href='./pembayaran.html';">
                                         <!-- Heroicon name: solid/badgeCheck -->
                                         <span class="pt-1">
                                             <svg class="w-5 h-5 text-red-500 group-hover:text-red-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fillRule="evenodd" d="M6.267 3.455a3.066 3.066 0 001.745-.723 3.066 3.066 0 013.976 0 3.066 3.066 0 001.745.723 3.066 3.066 0 012.812 2.812c.051.643.304 1.254.723 1.745a3.066 3.066 0 010 3.976 3.066 3.066 0 00-.723 1.745 3.066 3.066 0 01-2.812 2.812 3.066 3.066 0 00-1.745.723 3.066 3.066 0 01-3.976 0 3.066 3.066 0 00-1.745-.723 3.066 3.066 0 01-2.812-2.812 3.066 3.066 0 00-.723-1.745 3.066 3.066 0 010-3.976 3.066 3.066 0 00.723-1.745 3.066 3.066 0 012.812-2.812zm7.44 5.252a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clipRule="evenodd" /></svg>
