--- a/src/billing.html
+++ b/src/billing.html
@@ -226,7 +226,7 @@
                             <!--status waiting-->
                             <tr class="hover:bg-red-50">
                                 <td class="px-2 py-3 border-b border-gray-200  text-sm">
-                                    <p class="text-gray-900 whitespace-no-wrap"><a href="./invoice.html" class="link">#1234</a> Paket Langganan Bulanan</p>
+                                    <p class="text-gray-900 whitespace-no-wrap"><a href="./invoice-waiting.html" class="link">#1234</a> Paket Langganan Bulanan</p>
                                 </td>
                                 <td class="px-2 py-3 border-b border-gray-200 text-sm">
                                     <p class="text-gray-900 whitespace-no-wrap">
