--- a/src/index.html
+++ b/src/index.html
@@ -18,56 +18,59 @@
         <div class="social">
             <p class="w-full text-center mb-6 text-2xl font-bold">Choose  template :</p>
             <div class="grid grid-cols-6 gap-4 items-center">
-                <div class="p-3 text-center bg-red-100 border rounded">
+                <div class="p-3 text-center bg-white border rounded">
                     <a href="./register.html" target="_blank">Register step 1</a>
                 </div>
-                <div class="p-3 text-center bg-red-100 border rounded">
+                <div class="p-3 text-center bg-white border rounded">
                     <a href="./register-step2.html" target="_blank">Register-step2</a>
                 </div>
-                <div class="p-3 text-center bg-red-100 border rounded">
+                <div class="p-3 text-center bg-white border rounded">
                     <a href="./register-step3.html" target="_blank">Register-step3</a>
                 </div>
-                <div class="p-3 text-center bg-red-100 border rounded">
+                <div class="p-3 text-center bg-white border rounded">
                     <a href="./forgot-pass.html" target="_blank">Forgot password step 1</a>
                 </div>
-                <div class="p-3 text-center bg-red-100 border rounded">
+                <div class="p-3 text-center bg-white border rounded">
                     <a href="./forgot-pass2.html" target="_blank">Forgot password step 2</a>
                 </div>
-                <div class="p-3 text-center bg-red-100 border rounded">
+                <div class="p-3 text-center bg-white border rounded">
                     <a href="./forgot-pass3.html" target="_blank">Forgot password step 3</a>
                 </div>
-                <div class="p-3 text-center bg-red-100 border rounded">
+                <div class="p-3 text-center bg-white border rounded">
                     <a href="./login.html" target="_blank">Login</a>
                 </div>
-                <div class="p-3 text-center bg-red-100 border rounded">
+                <div class="p-3 text-center bg-white border rounded">
                     <a href="./blankpage.html" target="_blank">Blank</a>
                 </div>
-                <div class="p-3 text-center bg-red-100 border rounded">
+                <div class="p-3 text-center bg-white border rounded">
                     <a href="./beranda.html" target="_blank">Beranda</a>
                 </div>
-                <div class="p-3 text-center bg-red-100 border rounded">
+                <div class="p-3 text-center bg-white border rounded">
                     <a href="./produk.html" target="_blank">Produk</a>
                 </div>
-                <div class="p-3 text-center bg-red-100 border rounded">
+                <div class="p-3 text-center bg-white border rounded">
                     <a href="./domain.html" target="_blank">Domain</a>
                 </div>
-                <div class="p-3 text-center bg-red-100 border rounded">
+                <div class="p-3 text-center bg-white border rounded">
                     <a href="./info.html" target="_blank">Info</a>
                 </div>
-                <div class="p-3 text-center bg-red-100 border rounded">
+                <div class="p-3 text-center bg-white border rounded">
                     <a href="./register-lock.html" target="_blank">Register Lock</a>
                 </div>
-                <div class="p-3 text-center bg-red-100 border rounded">
+                <div class="p-3 text-center bg-white border rounded">
                     <a href="./layanan.html" target="_blank">Layanan</a>
                 </div>
-                <div class="p-3 text-center bg-red-100 border rounded">
+                <div class="p-3 text-center bg-white border rounded">
                     <a href="./pembayaran.html" target="_blank">Pembayaran</a>
                 </div>
-                <div class="p-3 text-center bg-red-100 border rounded">
+                <div class="p-3 text-center bg-white border rounded">
                     <a href="./invoice.html" target="_blank">Invoice Paid</a>
                 </div>
-                <div class="p-3 text-center bg-red-100 border rounded">
+                <div class="p-3 text-center bg-white border rounded">
                     <a href="./invoice-unpaid.html" target="_blank">Invoice Unpaid</a>
+                </div>
+                <div class="p-3 text-center bg-white border rounded">
+                    <a href="./invoice-waiting.html" target="_blank">Invoice Waiting for paymeny</a>
                 </div>
             </div>
         </div>
