--- a/src/invoice-waiting.html
+++ b/src/invoice-waiting.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Invoice Unpaid</title>
+    <title>Invoice Waiting</title>
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
 </head>
@@ -93,7 +93,7 @@
                     <div class="w-2/3 p-4 border-4 border-red-400 rounded md:w-full">
                         <!--header-->
                         <div class="flex justify-between items-center mb-8">
-                            <h3 class="text-2xl">INVOICE <span class="font-bold">#1234</span> <span class="text-lg bg-yellow-200 text-yellow-600 px-3 py-1.5 rounded ml-2">UNPAID</span></h3>
+                            <h3 class="text-2xl">INVOICE <span class="font-bold">#1234</span> <span class="text-lg bg-pink-200 text-pink-600 px-3 py-1.5 rounded ml-2">Waiting for payment</span></h3>
                             <p class="text-sm">
                                 Invoice date:
                                 <span class="block text-base text-gray-700">June, 23 2020</span>
@@ -183,7 +183,7 @@
                             <span class="pt-1">
                                 <svg class="w-5 h-5 text-red-500 group-hover:text-red-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fillRule="evenodd" d="M6.267 3.455a3.066 3.066 0 001.745-.723 3.066 3.066 0 013.976 0 3.066 3.066 0 001.745.723 3.066 3.066 0 012.812 2.812c.051.643.304 1.254.723 1.745a3.066 3.066 0 010 3.976 3.066 3.066 0 00-.723 1.745 3.066 3.066 0 01-2.812 2.812 3.066 3.066 0 00-1.745.723 3.066 3.066 0 01-3.976 0 3.066 3.066 0 00-1.745-.723 3.066 3.066 0 01-2.812-2.812 3.066 3.066 0 00-.723-1.745 3.066 3.066 0 010-3.976 3.066 3.066 0 00.723-1.745 3.066 3.066 0 012.812-2.812zm7.44 5.252a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clipRule="evenodd" /></svg>
                             </span>
-                            Bayar Tagihan
+                            Konfirmasi Pembayaran
                         </button>
 
                     </div>
