--- a/src/invoice-unpaid.html
+++ b/src/invoice-unpaid.html
@@ -191,7 +191,7 @@
 
                     <!--action-->
                     <div class="w-1/3 p-4 md:w-full bg-gray-100 rounded">
-                        <p class="font-bold text-gray-800 mb-6">Action</p>
+                        <h4 class="font-bold text-gray-800 mb-6">Action</h4>
                         <div class="grid items-center">
                             <button type="button" class="group relative flex justify-center py-2 px-4 btn-basic rounded-md" onclick="window.location.href='./register-step2.html';">
                                 <svg class="w-6 h-6 mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4" /></svg>
