--- a/src/invoice-waiting.html
+++ b/src/invoice-waiting.html
@@ -191,12 +191,33 @@
 
                     <!--action-->
                     <div class="w-1/3 p-4 md:w-full bg-gray-100 rounded">
-                        <p class="font-bold text-gray-800 mb-6">Action</p>
-                        <div class="grid items-center">
+                        <h4 class="font-bold text-gray-800 mb-6">Action</h4>
+                        <div class="grid items-center mb-10">
                             <button type="button" class="group relative flex justify-center py-2 px-4 btn-basic rounded-md" onclick="window.location.href='./register-step2.html';">
                                 <svg class="w-6 h-6 mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4" /></svg>
                                 Download
                             </button>
+                        </div>
+
+                        <div class="space-y-2 mb-10"> 
+                            <h4 class="font-bold text-gray-800 mb-6">Detail Konfirmasi</h4>
+                            <p class="flex justify-between text-sm border-b pb-3">
+                                Tanggal konfirmasi
+                                <span class="text-xs text-gray-800">Jumat, 21 Juni 2020 | 12:00 </span>
+                            </p>
+                            <p class="flex justify-between text-sm border-b pb-3">
+                                Transfer ke Bank
+                                <span class="text-xs text-gray-800">BCA, Cabang BSD (3232897645) </span>
+                            </p>
+                            <p class="flex justify-between text-sm border-b pb-3">
+                                Rekening Pengirim
+                                <span class="text-xs text-gray-800">3456343434232 </span>
+                            </p>
+                        </div>
+
+                        <div class="space-y-2"> 
+                            <h4 class="font-bold text-gray-800 mb-6">Bukti Upload Dokumen</h4>
+                            <img src="img/bukti.png" alt="bukti transfer">
                         </div>
                     </div>
                     <!--end action-->
