--- a/src/index.html
+++ b/src/index.html
@@ -72,6 +72,9 @@
                 <div class="p-3 text-center bg-white border rounded">
                     <a href="./invoice-waiting.html" target="_blank">Invoice Waiting for paymeny</a>
                 </div>
+                <div class="p-3 text-center bg-white border rounded">
+                    <a href="./faq.html" target="_blank">FAQ</a>
+                </div>
             </div>
         </div>
     </div>
