--- a/src/index.html
+++ b/src/index.html
@@ -9,15 +9,16 @@
 </head>
 <body class="bg-gray-200">
     
-    <header class="p-20 bg-gradient-to-r from-red-800 via-red-500 to-red-700 text-center">
+    <header class="p-20 bg-gradient-to-r from-red-800 via-red-500 to-red-700 text-center mb-10">
         <h1 class="hero-heading">Gulp with TailwindCSS templates</h1>
         <p class="w-full text-center text-white text-xl leading-5 mb-2">For Cloud Company</p>
         <p class="w-full text-center text-white text-lg leading-5 mb-10">Updated with Tailwind 2.0, PostCss 8.0+</p>
     </header>
+
     <div class="w-full">
         <div class="social">
-            <p class="w-full text-center mb-6 text-2xl font-bold">Choose  template :</p>
-            <div class="grid grid-cols-6 gap-4 items-center">
+            <p class="w-full text-center mb-10 text-2xl font-bold">Choose  template :</p>
+            <div class="grid grid-cols-6 gap-4 items-center p-4">
                 <div class="p-3 text-center bg-white border rounded">
                     <a href="./register.html" target="_blank">Register step 1</a>
                 </div>
