add kontak page

--- a/src/billing.html
+++ b/src/billing.html
@@ -59,9 +59,9 @@
                       x-transition:leave-end="opacity-0 transform -translate-y-3"
                       @click.away="open = false"
                     >
-                      <li><a href="#" class="py-1 px-3 block hover:bg-red-100">Profile</a></li>
-                      <li><a href="#" class="py-1 px-3 border-b block hover:bg-red-100">Billing</a></li>
-                      <li><a href="./login.html" class="py-1 px-3 block hover:bg-red-100">Log out</a></li>
+                        <li><a href="./profile.html" class="py-1 px-3 block hover:bg-red-100">Profile</a></li>
+                        <li><a href="./domain.html" class="py-1 px-3 border-b block hover:bg-red-100">My Domain</a></li>
+                        <li><a href="./login.html" class="py-1 px-3 block hover:bg-red-100">Log out</a></li>
                     </ul>
                 </div>
             </div>
