--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <div class="w-full">
         <div class="social">
             <p class="w-full text-center mb-10 text-2xl font-bold">Choose  template :</p>
-            <div class="grid grid-cols-6 gap-4 items-center p-4">
+            <div class="grid grid-cols-5 gap-4 items-center p-4">
                 <div class="p-3 text-center bg-white border rounded">
                     <a href="./register.html" target="_blank">Register step 1</a>
                 </div>
@@ -75,6 +75,12 @@
                 </div>
                 <div class="p-3 text-center bg-white border rounded">
                     <a href="./faq.html" target="_blank">FAQ</a>
+                </div>
+                <div class="p-3 text-center bg-white border rounded">
+                    <a href="./kontak.html" target="_blank">Kontak</a>
+                </div>
+                <div class="p-3 text-center bg-white border rounded">
+                    <a href="./profile.html" target="_blank">Profile</a>
                 </div>
             </div>
         </div>
