--- a/src/kontak.html
+++ b/src/kontak.html
@@ -59,9 +59,9 @@
                       x-transition:leave-end="opacity-0 transform -translate-y-3"
                       @click.away="open = false"
                     >
-                      <li><a href="#" class="py-1 px-3 block hover:bg-red-100">Profile</a></li>
-                      <li><a href="#" class="py-1 px-3 border-b block hover:bg-red-100">Billing</a></li>
-                      <li><a href="#" class="py-1 px-3 block hover:bg-red-100">Log out</a></li>
+                      <li><a href="./profile.html" class="py-1 px-3 block hover:bg-red-100">Profile</a></li>
+                      <li><a href="./domain.html" class="py-1 px-3 border-b block hover:bg-red-100">My Domain</a></li>
+                      <li><a href="./login.html" class="py-1 px-3 block hover:bg-red-100">Log out</a></li>
                     </ul>
                 </div>
             </div>
@@ -85,7 +85,71 @@
         <div class="mainContainer">
             <div class="max-w-6xl w-full  mx-auto py-6 md:px-6">
 
-                
+                <div class="flex gap-6 md:flex-col">
+                    <!--map-->
+                    <div class="w-2/3 p-4 border-4 border-red-400 rounded md:w-full">
+                        <div class="map-responsive">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63449.445222530914!2d106.61456617910159!3d-6.317420899999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69e4b9c856e5f7%3A0xd98c8b9d3cd44465!2sPandi%20-%20.Id%20Registry!5e0!3m2!1sid!2sid!4v1628158317250!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                        </div>
+                    </div>
+                    <!--end map-->
+
+                    <!--contact info-->
+                    <div class="w-1/3 p-4 md:w-full bg-gray-100 rounded">
+                        <h4 class="font-bold text-gray-800 mb-4">Hubungi Kami</h4>
+                        <div class="flex flex-start gap-4 mb-2 text-xs">
+                            <span class="font-semibold text-red-500 w-20">Alamat</span>
+                            <span class="w-full">PT. PANDI Indonesia Icon Business Park Unit L1-L2 BSD City Tangerang Selatan, Banten.</span>
+                        </div>
+                        <div class="flex flex-start gap-4 mb-2 text-xs">
+                            <span class="font-semibold text-red-500 w-20">Email</span>
+                            <span class="w-full">info@pandi.com</span>
+                        </div>
+                        <div class="flex flex-start gap-4 mb-2 text-xs">
+                            <span class="font-semibold text-red-500 w-20">Phone</span>
+                            <span class="w-full">022-98968465</span>
+                        </div>
+                        <div class="flex flex-start gap-4 mb-6 text-xs">
+                            <span class="font-semibold text-red-500 w-20">Whatsapp</span>
+                            <span class="w-full">+62 87649087</span>
+                        </div>
+
+                        <!--socmed-->
+                        <div class="bg-red-600 h-12 items-center text-white rounded-full mb-6">
+                            test
+                        </div>
+                        <!--end socmed-->
+
+                        <!--form-->
+                        <div class="flex flex-col space-y-2">
+                            <h4 class="font-bold text-gray-800 mb-2">Kirim pesan</h4>
+                            <div class="form-controll w-full">
+                                <input class="input" type="text" placeholder="Nama"/>
+                            </div>
+                            <div class="form-controll w-full">
+                                <input class="input" type="text" placeholder="No. Tlp / Whatsapp" />
+                            </div>
+                            <div class="form-controll w-full">
+                                <input class="input" type="email" placeholder="Email" />
+                            </div>
+                            <div class="form-controll w-full">
+                                <textarea class="input" name="" id="" rows="3" placeholder="Pesan Anda"></textarea>
+                            </div>
+
+                            <div class="flex justify-end pt-2">
+                                <button type="button" class="group relative flex justify-center py-2 px-3 text-sm btn-primary rounded" >
+                                    <span class="flex items-center">
+                                    <!-- Heroicon name: stroke/Email -->
+                                    <svg class="w-5 h-5 mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" /></svg>
+                                    </span>
+                                    Kirim pesan
+                                </button>
+                            </div>
+                        </div>
+                        <!--form-->
+                    </div>
+                    <!--end contact info-->
+                </div>
 
             </div>
         </div>
