--- a/src/profile.html
+++ b/src/profile.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Register lock</title>
+    <title>Profile</title>
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
 </head>
@@ -31,9 +31,9 @@
                 <nav :class="{'flex': open, 'md:hidden': !open}" class="navbar mb:pb-4 pb-0 md:hidde md:p-4">
                     <a class="navlink" href="./beranda.html">Beranda</a>
                     <a class="navlink" href="./produk.html">Produk</a>  
-                    <a class="navlink-active" href="./domain.html">Domain</a>     
+                    <a class="navlink" href="./domain.html">Domain</a>     
                     <a class="navlink" href="./billing.html">Billing</a> 
-                    <a class="navlink" href="./kontak.html">Kontak</a> 
+                    <a class="navlink-active" href="./kontak.html">Kontak</a> 
                 </nav>
             </div>
             <!-- end navbar -->
@@ -59,9 +59,9 @@
                       x-transition:leave-end="opacity-0 transform -translate-y-3"
                       @click.away="open = false"
                     >
-                        <li><a href="./profile.html" class="py-1 px-3 block hover:bg-red-100">Profile</a></li>
-                        <li><a href="./domain.html" class="py-1 px-3 border-b block hover:bg-red-100">My Domain</a></li>
-                        <li><a href="./login.html" class="py-1 px-3 block hover:bg-red-100">Log out</a></li>
+                      <li><a href="./profile.html" class="py-1 px-3 block hover:bg-red-100">Profile</a></li>
+                      <li><a href="./domain.html" class="py-1 px-3 border-b block hover:bg-red-100">My Domain</a></li>
+                      <li><a href="./login.html" class="py-1 px-3 block hover:bg-red-100">Log out</a></li>
                     </ul>
                 </div>
             </div>
@@ -75,12 +75,8 @@
 
         <!-- title page -->
         <div class="title mb-6">
-            <div class="max-w-6xl w-full  mx-auto pt-2 pb-3 md:px-6 flex justify-start items-center">
-                <a href="./domain.html" class="group relative flex justify-start text-red-200 mr-3 hover:text-white transition-all ease-in-out duration-300">
-                    <svg class="w-6 h-6 mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M10 19l-7-7m0 0l7-7m-7 7h18" /></svg>
-                   Domain
-                </a>
-                <h1 class="page-title text-white">domainku.id</h1>
+            <div class="max-w-6xl w-full  mx-auto pt-2 pb-3 md:px-6">
+                <h1 class="page-title text-white">Pandji Wijaya</h1>
             </div>
         </div>
         <!-- title page -->
@@ -89,52 +85,7 @@
         <div class="mainContainer">
             <div class="max-w-6xl w-full  mx-auto py-6 md:px-6">
 
-                <div class="flex md:flex-col gap-6">
-                    <!--action-->
-                    <div class="w-52 md:w-full">
-                        <h3 class="font-semibold text-xl text-gray-800">Action</h3>
-                        <p class="mb-4">Pilih menu</p>
-                        <div class="space-y-2">
-                            <a href="./info.html" class="group relative flex justify-start py-2 px-4 btn-primary rounded-md">
-                                <svg class="w-6 h-6 mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M9.663 17h4.673M12 3v1m6.364 1.636l-.707.707M21 12h-1M4 12H3m3.343-5.657l-.707-.707m2.828 9.9a5 5 0 117.072 0l-.548.547A3.374 3.374 0 0014 18.469V19a2 2 0 11-4 0v-.531c0-.895-.356-1.754-.988-2.386l-.548-.547z" /></svg>
-                                Info
-                            </a>
-                            <a href="./register-lock.html" class="group relative flex justify-start py-2 px-4 btn-primary rounded-md">
-                                <svg class="w-6 h-6 mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z" /></svg>
-                                Registry Lock
-                            </a>
-                            <a href="./layanan.html" class="group relative flex justify-start py-2 px-4 btn-primary rounded-md">
-                                <svg class="w-6 h-6 mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M17 14v6m-3-3h6M6 10h2a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v2a2 2 0 002 2zm10 0h2a2 2 0 002-2V6a2 2 0 00-2-2h-2a2 2 0 00-2 2v2a2 2 0 002 2zM6 20h2a2 2 0 002-2v-2a2 2 0 00-2-2H6a2 2 0 00-2 2v2a2 2 0 002 2z" /></svg>
-                                Layanan
-                            </a>
-                        </div>
-                    </div>
-                    <!--end action-->
-
-                    <!--info-->
-                    <div class="w-full">
-                        <h3 class="font-semibold text-xl text-gray-800">Registry Lock</h3>
-                        <p class="mb-4">Kelola status penguncian Domain Anda</p>
-
-                        <!-- lock toggle -->
-                        <div class="flex justify-start items-center mt-3 border border-green-500 bg-green-100 p-5 rounded" x-data="{ toggle: '0' }">
-                            <div class="mr-4 text-green-500">
-                                REGISTRY LOCK STATUS
-                            </div>
-                            <div class="relative rounded-full w-12 h-6 transition duration-200 ease-linear"
-                                :class="[toggle === '1' ? 'bg-green-400' : 'bg-gray-400']">
-                            <label for="toggle" 
-                                    class="absolute left-0 bg-white border-2 mb-2 w-6 h-6 rounded-full transition transform duration-100 ease-linear cursor-pointer"
-                                    :class="[toggle === '1' ? 'translate-x-full border-green-400' : 'translate-x-0 border-gray-400']"></label>
-                            <input type="checkbox" id="toggle" name="toggle" 
-                                    class="appearance-none w-full h-full active:outline-none focus:outline-none"
-                                    @click="toggle === '0' ? toggle = '1' : toggle = '0'">
-                            </div>
-                        </div>
-                        <!-- end lock toggle -->
-                    </div>
-                    <!--end info-->
-                </div>
+                
 
             </div>
         </div>
