add kontak and else

--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,9 @@
     </header>
 
     <div class="w-full">
-        <div class="social">
+        <div class="social mb-20">
             <p class="w-full text-center mb-10 text-2xl font-bold">Choose  template :</p>
-            <div class="grid grid-cols-5 gap-4 items-center p-4">
+            <div class="grid grid-cols-4 gap-6 p-4 items-stretch">
                 <div class="p-3 text-center bg-white border rounded">
                     <a href="./register.html" target="_blank">Register step 1</a>
                 </div>
@@ -81,6 +81,12 @@
                 </div>
                 <div class="p-3 text-center bg-white border rounded">
                     <a href="./profile.html" target="_blank">Profile</a>
+                </div>
+                <div class="p-3 text-center bg-white border rounded">
+                    <a href="./syarat.html" target="_blank">Syarat</a>
+                </div>
+                <div class="p-3 text-center bg-white border rounded">
+                    <a href="./notifikasi.html" target="_blank">Notifikasi</a>
                 </div>
             </div>
         </div>
