--- a/src/profile.html
+++ b/src/profile.html
@@ -6,7 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Profile</title>
     <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <!--pluggin-->
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.min.css">
 </head>
 
 <body>
@@ -33,14 +36,15 @@
                     <a class="navlink" href="./produk.html">Produk</a>  
                     <a class="navlink" href="./domain.html">Domain</a>     
                     <a class="navlink" href="./billing.html">Billing</a> 
-                    <a class="navlink-active" href="./kontak.html">Kontak</a> 
+                    <a class="navlink" href="./kontak.html">Kontak</a> 
                 </nav>
             </div>
             <!-- end navbar -->
 
             <!-- user -->
             <div class="relative flex">
-                <a href="#" class="mt-2 mr-3"> 
+                <a href="./notifikasi.html" class="mt-2 mr-3"> 
+                    <span class="animate-ping absolute inline-flex h-2 w-2 rounded-full bg-red-600 opacity-75"></span>
                     <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M10 2a6 6 0 00-6 6v3.586l-.707.707A1 1 0 004 14h12a1 1 0 00.707-1.707L16 11.586V8a6 6 0 00-6-6zM10 18a3 3 0 01-3-3h6a3 3 0 01-3 3z" /></svg>
                 </a>
 
@@ -76,7 +80,7 @@
         <!-- title page -->
         <div class="title mb-6">
             <div class="max-w-6xl w-full  mx-auto pt-2 pb-3 md:px-6">
-                <h1 class="page-title text-white">Pandji Wijaya</h1>
+                <h1 class="page-title text-white">PROFIL</h1>
             </div>
         </div>
         <!-- title page -->
@@ -85,7 +89,63 @@
         <div class="mainContainer">
             <div class="max-w-6xl w-full  mx-auto py-6 md:px-6">
 
-                
+                <div class="flex gap-6 md:flex-col">
+                    <!--form-->
+                    <div class="w-1/2 px-4 py-8 border-4 border-red-400 rounded-xl md:w-full">
+                        <form class="space-y-4 mx-8" action="#" method="POST">
+                            <div class="flex items-center form-controll">
+                                <div class="mb-1 w-1/3 text-red-500 font-medium">
+                                  <label for="nama-depan">Nama Depan</label>
+                                </div>
+                                <div class="w-2/3 flex-grow">
+                                  <input class="w-full input" type="text" placeholder="" id="nama-depan"/>
+                                </div>
+                            </div>
+                            <div class="flex items-center form-controll">
+                                <div class="mb-1 w-1/3 text-red-500 font-medium">
+                                  <label for="nama-belakang">Nama Belakang</label>
+                                </div>
+                                <div class="w-2/3 flex-grow">
+                                  <input class="w-full input" type="text" placeholder="" id="nama-belakang"/>
+                                </div>
+                            </div>
+                            <div class="flex items-baseline form-controll">
+                                <div class="mb-1 w-1/3 text-red-500 font-medium">
+                                  <label for="email">Email</label>
+                                </div>
+                                <div class="w-2/3 flex-grow">
+                                  <input class="w-full input" type="email" placeholder="" id="email"/>
+                                </div>
+                            </div>
+                            <div class="flex items-baseline form-controll">
+                                <div class="mb-1 w-1/3 text-red-500 font-medium">
+                                  <label for="alamat">Alamat</label>
+                                </div>
+                                <div class="w-2/3 flex-grow">
+                                  <textarea class="w-full input" name="alamat" id="alamat" rows="3"></textarea>
+                                </div>
+                            </div>
+                            <div class="flex items-center form-controll">
+                                <div class="mb-1 w-1/3 text-red-500 font-medium">
+                                  <label for="wa">No. tlp / WA</label>
+                                </div>
+                                <div class="w-2/3 flex-grow">
+                                  <input class="w-full input" type="wa" placeholder="" id="wa"/>
+                                </div>
+                            </div>
+                            <div class="flex justify-end pt-2">
+                                <button type="button" class="group relative flex justify-center py-2 px-3 text-sm btn-primary rounded" >
+                                    <span class="flex items-center">
+                                    <!-- Heroicon name: stroke/Email -->
+                                    <svg class="w-6 h-6 mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
+                                    </span>
+                                    Simpan
+                                </button>
+                            </div>
+                        </form>
+                    </div>
+                    <!--end form-->
+                </div>
 
             </div>
         </div>
@@ -97,15 +157,15 @@
     <!-- footer -->
     <footer class="footer">
         <div class="max-w-6xl w-full  mx-auto">
-            <div class="relative flex items-center justify-between">
-                <div class="text-xs text-gray-400">
+            <div class="relative flex items-center justify-between md:flex-col-reverse md:space-y-4">
+                <div class="text-xs text-gray-400 md:text-center md:mt-4">
                     © 2021 2021 PANDI - PENGELOLA NAMA DOMAIN INTERNET INDONESIA. <br/>All Rights Reserved.
                 </div>
                 <div class="text-sm">
                     <a href="#" class="link">Pandi <span class="mx-2 text-gray-400">|</span></a>
-                    <a href="#" class="link">FAQ <span class="mx-2 text-gray-400">|</span></a>
+                    <a href="faq.html" class="link">FAQ <span class="mx-2 text-gray-400">|</span></a>
                     <a href="#" class="link">Regulasi <span class="mx-2 text-gray-400">|</span></a>
-                    <a href="#" class="link">Syarat & Ketentuan</a>
+                    <a href="syarat.html" class="link">Syarat & Ketentuan</a>
                 </div>
                 <div class="h-14">
                    <a href="#" class="link">
