--- a/src/syarat.html
+++ b/src/syarat.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Blank</title>
+    <title>Syarat</title>
     <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <!--pluggin-->
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.min.css">
 </head>
 
 <body>
@@ -43,8 +40,7 @@
 
             <!-- user -->
             <div class="relative flex">
-                <a href="./notifikasi.html" class="mt-2 mr-3"> 
-                    <span class="animate-ping absolute inline-flex h-2 w-2 rounded-full bg-red-600 opacity-75"></span>
+                <a href="#" class="mt-2 mr-3"> 
                     <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M10 2a6 6 0 00-6 6v3.586l-.707.707A1 1 0 004 14h12a1 1 0 00.707-1.707L16 11.586V8a6 6 0 00-6-6zM10 18a3 3 0 01-3-3h6a3 3 0 01-3 3z" /></svg>
                 </a>
 
@@ -80,7 +76,7 @@
         <!-- title page -->
         <div class="title mb-6">
             <div class="max-w-6xl w-full  mx-auto pt-2 pb-3 md:px-6">
-                <h1 class="page-title text-white">BERANDA</h1>
+                <h1 class="page-title text-white">SYARAT DAN KETENTUAN</h1>
             </div>
         </div>
         <!-- title page -->
@@ -89,7 +85,27 @@
         <div class="mainContainer">
             <div class="max-w-6xl w-full  mx-auto py-6 md:px-6">
 
-                kontenmu disini kawan!
+                <div class="p-10 border-4 border-red-400 rounded-xl syaratWrap overflow-y-auto space-y-4">
+                    <h4 class="font-bold text-gray-800">Kebijakan Kami</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis dicta reprehenderit numquam et pariatur! Explicabo voluptas tenetur, odit iusto, cupiditate aperiam magnam qui, voluptatibus eius dignissimos id saepe inventore voluptate? Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis dicta reprehenderit numquam et pariatur! Explicabo voluptas tenetur, odit iusto, cupiditate aperiam magnam qui, voluptatibus eius dignissimos id saepe inventore voluptate? Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis dicta reprehenderit numquam et pariatur! Explicabo voluptas tenetur, odit iusto, cupiditate aperiam magnam qui, voluptatibus eius dignissimos id saepe inventore voluptate?
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis dicta reprehenderit numquam et pariatur! Explicabo voluptas tenetur, odit iusto, cupiditate aperiam magnam qui, voluptatibus eius dignissimos id saepe inventore voluptate? Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis dicta reprehenderit numquam et pariatur! Explicabo voluptas tenetur, odit iusto, cupiditate aperiam magnam qui, voluptatibus eius dignissimos id saepe inventore voluptate? Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis dicta reprehenderit numquam et pariatur! Explicabo voluptas tenetur, odit iusto, cupiditate aperiam magnam qui, voluptatibus eius dignissimos id saepe inventore voluptate?
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis dicta reprehenderit numquam et pariatur! Explicabo voluptas tenetur, odit iusto, cupiditate aperiam magnam qui, voluptatibus eius dignissimos id saepe inventore voluptate? Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis dicta reprehenderit numquam et pariatur! Explicabo voluptas tenetur, odit iusto, cupiditate aperiam magnam qui, voluptatibus eius dignissimos id saepe inventore voluptate? Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis dicta reprehenderit numquam et pariatur! Explicabo voluptas tenetur, odit iusto, cupiditate aperiam magnam qui, voluptatibus eius dignissimos id saepe inventore voluptate?
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis dicta reprehenderit numquam et pariatur! Explicabo voluptas tenetur, odit iusto, cupiditate aperiam magnam qui, voluptatibus eius dignissimos id saepe inventore voluptate? Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis dicta reprehenderit numquam et pariatur! Explicabo voluptas tenetur, odit iusto, cupiditate aperiam magnam qui, voluptatibus eius dignissimos id saepe inventore voluptate? Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis dicta reprehenderit numquam et pariatur! Explicabo voluptas tenetur, odit iusto, cupiditate aperiam magnam qui, voluptatibus eius dignissimos id saepe inventore voluptate?
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis dicta reprehenderit numquam et pariatur! Explicabo voluptas tenetur, odit iusto, cupiditate aperiam magnam qui, voluptatibus eius dignissimos id saepe inventore voluptate? Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis dicta reprehenderit numquam et pariatur! Explicabo voluptas tenetur, odit iusto, cupiditate aperiam magnam qui, voluptatibus eius dignissimos id saepe inventore voluptate? Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis dicta reprehenderit numquam et pariatur! Explicabo voluptas tenetur, odit iusto, cupiditate aperiam magnam qui, voluptatibus eius dignissimos id saepe inventore voluptate?
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis dicta reprehenderit numquam et pariatur! Explicabo voluptas tenetur, odit iusto, cupiditate aperiam magnam qui, voluptatibus eius dignissimos id saepe inventore voluptate? Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis dicta reprehenderit numquam et pariatur! Explicabo voluptas tenetur, odit iusto, cupiditate aperiam magnam qui, voluptatibus eius dignissimos id saepe inventore voluptate? Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis dicta reprehenderit numquam et pariatur! Explicabo voluptas tenetur, odit iusto, cupiditate aperiam magnam qui, voluptatibus eius dignissimos id saepe inventore voluptate?
+                    </p>
+                </div>
 
             </div>
         </div>
@@ -101,15 +117,15 @@
     <!-- footer -->
     <footer class="footer">
         <div class="max-w-6xl w-full  mx-auto">
-            <div class="relative flex items-center justify-between md:flex-col-reverse md:space-y-4">
-                <div class="text-xs text-gray-400 md:text-center md:mt-4">
+            <div class="relative flex items-center justify-between">
+                <div class="text-xs text-gray-400">
                     © 2021 2021 PANDI - PENGELOLA NAMA DOMAIN INTERNET INDONESIA. <br/>All Rights Reserved.
                 </div>
                 <div class="text-sm">
                     <a href="#" class="link">Pandi <span class="mx-2 text-gray-400">|</span></a>
-                    <a href="faq.html" class="link">FAQ <span class="mx-2 text-gray-400">|</span></a>
+                    <a href="#" class="link">FAQ <span class="mx-2 text-gray-400">|</span></a>
                     <a href="#" class="link">Regulasi <span class="mx-2 text-gray-400">|</span></a>
-                    <a href="syarat.html" class="link">Syarat & Ketentuan</a>
+                    <a href="#" class="link">Syarat & Ketentuan</a>
                 </div>
                 <div class="h-14">
                    <a href="#" class="link">
