--- a/src/beranda.html
+++ b/src/beranda.html
@@ -124,7 +124,7 @@
                 <!-- footer -->
                 <div class="p-4 text-right border-t mt-6">
                     <button class="btn-basic py-1.5 px-3 mr-2 rounded" @click="showModal = false">Batal</button>
-                    <button class="btn-primary py-1.5 px-3 rounded" onclick="window.location.href='./formbuilder-add.html';">Pesan</button>
+                    <button class="btn-primary py-1.5 px-3 rounded" onclick="window.location.href='./layanan.html';">Pesan</button>
                 </div>
             </div>
         </div>
